@@ -51,7 +51,7 @@ public abstract class AbstractExceptionContextTest<T extends ExceptionContext & 
             .addContextValue("test1", null)
             .addContextValue("test2", "some value")
             .addContextValue("test Date", new Date())
-            .addContextValue("test Nbr", new Integer(5))
+            .addContextValue("test Nbr", Integer.valueOf(5))
             .addContextValue("test Poorly written obj", new ObjectWithFaultyToString());
     }
 
